Remove usage of `org.apache.commons.lang.StringUtils` (#45)
Remove usage of Commons Lang